Fix menu layout on mobile

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -234,8 +234,10 @@ body .site-footer {
 }
 
 .close {
-    position: relative;
-    z-index: 99;
+    position: fixed;
+    z-index: 9999;
+    top: 12px;
+    right: 12px;
 }
 
 .rating img {
