--- a/src/styles/screen.css
+++ b/src/styles/screen.css
@@ -205,13 +205,10 @@ body {
     align-items: center;
     overflow-x: auto;
     overflow-y: hidden;
-    -webkit-overflow-scrolling: touch;
     margin-right: 10px;
     padding-bottom: 80px;
     letter-spacing: 0.4px;
     white-space: nowrap;
-
-    -ms-overflow-scrolling: touch;
 }
 
 /* Site Nav Hack Explanation (above):
